2008-09-15      12:28   yurivict
	* skim/bootstrap: -replaced cvs->svn in admin directory checkout

2008-02-24 01:17  ryo-dairiki

	* Makefile.am, configure.ac, po/.cvsignore, po/nl.po,
	  skim/.cvsignore, skim/bootstrap: - Added a dutch translation.  -
	  Fix configure.ac to allow you disabling skim support.  - Fix
	  skim/bootstrap to download admin stuff from the kde subversion
	  directly.

2008-02-17 16:07  ryo-dairiki

	* ChangeLog: Prepare for 0.5.8 (Fix Malyalam-phonetic table)

2008-02-17 16:01  ryo-dairiki

	* configure.ac, tables/ml/Makefile.am,
	  tables/ml/Malayalam-phonetic.txt.in: - Prepare for 0.4.8.

2008-02-17 15:57  ryo-dairiki

	* icons/Makefile.am, po/remove-potcdate.sed, skim/configure.in.in:
	  [no log message]

2008-02-09 11:50  ryo-dairiki

	* .cproject, icons/Malayalam-phonetic.png,
	  tables/ml/Malayalam-phonetic.txt.in: - Added Malayalam-phonetic.

2007-04-10 16:40  suzhe

	* tables/ta/Tamil-remington.txt.in: added .h keystroke for
	  ணா(Naa), றா(Raa), and னா(naa)

2007-03-19 11:59  suzhe

	* tables/kn/Kannada-inscript.txt.in: A minor fix.

2007-03-11 21:09  suzhe

	* bootstrap, configure.ac, icons/Translit.png,
	  icons/Ukrainian-Translit.png, tables/Makefile.am,
	  tables/ru/Makefile.am, tables/ru/Translit.txt.in,
	  tables/uk/Makefile.am, tables/uk/Ukrainian-Translit.txt.in: Added
	  two new tables.

2006-10-12 00:58  suzhe

	* ChangeLog, scim-tables.spec.in, icons/Makefile.am: Added missing
	  Tamil-remington.png file.

2006-10-09 01:13  suzhe

	* configure.ac: Bump version to 0.5.7

2006-09-29 14:00  suzhe

	* tables/hi/: Hindi-itrans.bin, Hindi-itrans.txt: Small updates.
	  Removed Hindi-itrans table.

2006-08-23 19:25  suzhe

	* src/scim_generic_table.h: Fixed broken wildcard keys and end keys
	  support.

2006-08-04 21:51  suzhe

	* tables/ta/Tamil-remington.txt.in: Updated Tamil-remington.txt.in.

2006-07-22 19:37  suzhe

	* tables/th/Thai.txt.in: Fix keymap of Thai table.

2006-07-22 03:03  suzhe
