@@ -1,0 +1,176 @@
+### File header must not be modified
+### This file must be encoded into UTF-8.
+### This file is based on the traditional Russian typewriter layout
+SCIM_Generic_Table_Phrase_Library_TEXT
+VERSION_1_0
+
+### Begin Table definition.
+BEGIN_DEFINITION
+
+### An unique id to distinguish this table among others.
+### Use uuidgen to generate this kind of id.
+UUID = 768a01bf-bc71-90ff-13ca-7bcdcaa875a1
+
+### A unique number indicates the version of this file.
+### For example the last modified date of this file.
+### This number must be less than 2^32.
+SERIAL_NUMBER = 20080814
+
+ICON = @SCIM_ICONDIR@/RussianTraditional.png
+
+### The default name of this table
+NAME = RussianTraditional
+
+### The local names of this table 
+###NAME.ru_RU = 
+
+### Supported languages of this table
+LANGUAGES = ru_RU
+
+### The author of this table
+AUTHOR = Yuri Victorovich <yuri@rawbw.com>
+
+### Prompt string to be displayed in the status area.
+STATUS_PROMPT = Р
+
+### The Keyboard Layout used by this table. Unset or set to "Unknown" to accept any kind of layouts.
+KEYBOARD_LAYOUT = US_Default
+
+### If true then the first candidate phrase
+### will be selected automatically during inputing.
+AUTO_SELECT = TRUE
+
+### If true then a multi wildcard will be appended
+### at the end of inputing string automatically.
+AUTO_WILDCARD = FALSE
+
+### If true then the result string will be committed to client automatically.
+### This should be used with AUTO_SELECT = TRUE.
+AUTO_COMMIT = TRUE
+
+### If true then the inputted string will be automatically splitted during inputing.
+AUTO_SPLIT = TRUE
+
+### If true then the phrases' frequencies will be adjusted dynamically.
+DYNAMIC_ADJUST = FALSE
+
+### If true then the preedit area will be filled up by the current candidate phrase automatically.
+AUTO_FILL = TRUE
+
+### If true then the lookup table will always be shown if there is any candidate phrase.
+### Otherwise the lookup table won't be shown unless the user requires it by moving the preedit caret left.
+ALWAYS_SHOW_LOOKUP = FALSE
+
+### Enable full width punctuation property
+USE_FULL_WIDTH_PUNCT = FALSE
+
+### Use full width punctuation by default
+DEF_FULL_WIDTH_PUNCT = FALSE
+
+### Enable full width letter property
+USE_FULL_WIDTH_LETTER = FALSE
+
+### Use full width letter by default
+DEF_FULL_WIDTH_LETTER = FALSE
+
+### The maxmium length of a key.
+MAX_KEY_LENGTH = 1
+
+### Valid input chars.
+VALID_INPUT_CHARS = F<DULT~:PBQRKVYJGHCNEA{WXIO}SM">Zf,dult`;pbqrkvyjghcnea[wxio]sm'.z
+
+### Single wildcard char, can have multiple chars.
+###SINGLE_WILDCARD_CHAR = ?
+
+### Multi wildcard char.
+###MULTI_WILDCARD_CHAR = *
+
+### The key strokes to split inputted string.
+###SPLIT_KEYS = quoteright
+
+### The key strokes to commit the convert result to client.
+COMMIT_KEYS = space
+
+### The key strokes to forward the inputted string to client.
+FORWARD_KEYS = Return
+
+### The key strokes to select candidiate phrases.
+SELECT_KEYS = 1,2,3,4,5,6,7,8,9
+
+### The key strokes to page up the lookup table.
+PAGE_UP_KEYS = Page_Up
+
+### The key strokes to page down the lookup table.
+PAGE_DOWN_KEYS = Page_Down
+
+END_DEFINITION
+
+### Begin Table data.
+BEGIN_TABLE
+F	А	0
+<	Б	0
+D	В	0
+U	Г	0
+L	Д	0
+T	Е	0
+~	Ё	0
+:	Ж	0
+P	З	0
+B	И	0
+Q	Й	0
+R	К	0
+K	Л	0
+V	М	0
+Y	Н	0
+J	О	0
+G	П	0
+H	Р	0
+C	С	0
+N	Т	0
+E	У	0
+A	Ф	0
+{	Х	0
+W	Ц	0
+X	Ч	0
+I	Ш	0
+O	Щ	0
+}	Ъ	0
+S	Ы	0
+M	Ь	0
+"	Э	0
+>	Ю	0
+Z	Я	0
+f	а	0
+,	б	0
+d	в	0
+u	г	0
+l	д	0
+t	е	0
+`	ё	0
+;	ж	0
+p	з	0
+b	и	0
+q	й	0
+r	к	0
+k	л	0
+v	м	0
+y	н	0
+j	о	0
+g	п	0
+h	р	0
+c	с	0
+n	т	0
+e	у	0
+a	ф	0
+[	х	0
+w	ц	0
+x	ч	0
+i	ш	0
+o	щ	0
+]	ъ	0
+s	ы	0
+m	ь	0
+'	э	0
+.	ю	0
+z	я	0
+END_TABLE
